# bevy-rwkv

./: .gitattributes  .gitignore  Cargo.toml
assets/shaders/: add.wgsl  channel_mix.wgsl  embed.wgsl  layer_norm.wgsl  matmul.wgsl  output_gate.wgsl  squared_relu.wgsl  time_mix.wgsl  token_mix.wgsl  token_shift.wgsl
src/: execute.rs  load.rs  main.rs  model.rs  tokenizer.rs
src/model/: mod.rs  render.rs
